# src/spec/schema/openapi.yaml
@@ -1267,7 +1267,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateScoreAssignBody'
+              $ref: '#/components/schemas/UpdateScoreAssignBody'
     delete:
       operationId: Scores_delete
       description: Delete a score assignment
@@ -1372,6 +1372,67 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
       tags:
         - Scores
+  /year/{yearId}/class/{classId}/score/{scoreAssignId}/student:
+    put:
+      operationId: Scores_upsertScoreStudent
+      description: Create or update a score for a student
+      parameters:
+        - name: yearId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: classId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: scoreAssignId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - success
+                  - message
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    $ref: '#/components/schemas/ScoreStudent'
+                  error:
+                    type: string
+        '400':
+          description: The server could not understand the request due to invalid syntax.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      tags:
+        - Scores
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              anyOf:
+                - $ref: '#/components/schemas/CreateScoreStudentBody'
+                - $ref: '#/components/schemas/UpdateScoreStudentBody'
 components:
   schemas:
     CheckDate:
